tailwindcss/components/table-prose.css
@layer components {
  :where(.table-prose) {
    @apply w-full table-auto text-left border border-gray-100 rounded-lg overflow-hidden sds-theme-plaid:rounded-none;
    border-collapse: separate;
    border-spacing: 0;
  }

  :where(.dark .table-prose) {
    @apply border border-gray-800;
  }

  :where(.table-prose thead) {
    @apply border-y border-gray-100 rounded-lg sds-theme-plaid:rounded-none;
  }

  :where(.dark .table-prose thead) {
    @apply border-gray-800;
  }
  
  :where(.table-prose thead th) {
    @apply text-gray-600 bg-gray-25/50 font-semibold text-sm align-middle p-2 relative select-none border-b border-gray-100;
  }

  :where(.dark .table-prose thead th) {
    @apply text-gray-400 bg-gray-900/85 border-b border-gray-800;
  }
  
  :where(.table-prose tbody tr) {
    @apply bg-white px-2;
  }

  :where(.dark .table-prose tbody tr) {
    @apply bg-gray-950;
  }
  
  :where(.table-prose tbody td) {
    @apply align-top p-2 relative border-b border-gray-100;
  }

  :where(.table-prose tbody tr:last-child td) {
    @apply border-b-0;
  }

  :where(.dark .table-prose tbody td) {
    @apply border-gray-800;
  }

  :where(.table-prose tfoot) {
    @apply bg-gray-600/2;
  }

  :where(.dark .table-prose tfoot) {
    @apply bg-gray-400/2;
  }

  :where(.table-prose tfoot tr) {
    @apply px-2;
  }

  :where(.table-prose tfoot td) {
    @apply border-t border-gray-100;
    @apply px-2 py-4;
  }

  :where(.dark .table-prose tfoot td) {
    @apply border-gray-800;
  }

  /* Style when [data-id="sds-data-table"] is the parent of .table-prose */
  :where([data-id="sds-data-table"] .table-prose),
  :where([data-id="sds-data-table"] .table-prose > thead) {
    @apply rounded-tl-none rounded-tr-none;
  }
}

/* th/td-based variants */

@custom-variant table-prose-th (:is(& th, & thead th));
@custom-variant table-prose-td (:is(& td, & tbody td));

/* sm */

@utility table-prose-sm {
  & tbody td {
    @apply py-1;
  }
}

/* lg */

@utility table-prose-lg {
  & tbody td {
    @apply py-4;
  }
}

